--- a/mpd.conf
+++ b/mpd.conf
@@ -1,4 +1,6 @@
-#https://www.youtube.com/watch?v=NwS28dX7eOI
+# https://www.youtube.com/watch?v=NwS28dX7eOI
+# save to file ~/.mpd/mpd.conf
+
 music_directory    "/home/light/Music/"
 playlist_directory "/home/light/.mpd/playlist/"
 db_file            "/home/light/.mpd/mpd.db"
