--- a/mpd.conf
+++ b/mpd.conf
@@ -1,12 +1,12 @@
 # https://www.youtube.com/watch?v=NwS28dX7eOI
 # save to file ~/.mpd/mpd.conf
 
-music_directory    "/home/light/Music/"
-playlist_directory "/home/light/.mpd/playlist/"
+music_directory    "/home/light/Music"
+playlist_directory "/home/light/.mpd/playlists"   # Cannot use ~/
 db_file            "/home/light/.mpd/mpd.db"
 log_file           "/home/light/.mpd/mpd.log"
 pid_file           "/home/light/.mpd/mpd.pid"
-state_file         "/home/light/.mpd/mpdstate"
+state_file         "/home/lihgt/.mpd/mpdstate"
 audio_output {
         type "pulse"
         name "pulse audio"
