--- a/mpd.conf
+++ b/mpd.conf
@@ -6,7 +6,7 @@ playlist_directory "/home/light/.mpd/playlists"   # Cannot use ~/
 db_file            "/home/light/.mpd/mpd.db"
 log_file           "/home/light/.mpd/mpd.log"
 pid_file           "/home/light/.mpd/mpd.pid"
-state_file         "/home/lihgt/.mpd/mpdstate"
+state_file         "/home/light/.mpd/mpdstate"
 audio_output {
         type "pulse"
         name "pulse audio"
