--- a/mpd.conf
+++ b/mpd.conf
@@ -7,15 +7,17 @@ db_file            "/home/light/.mpd/mpd.db"
 log_file           "/home/light/.mpd/mpd.log"
 pid_file           "/home/light/.mpd/mpd.pid"
 state_file         "/home/light/.mpd/mpdstate"
+
 audio_output {
         type "pulse"
         name "pulse audio"
 }
+
 audio_output {
-    type                    "fifo"
-    name                    "my_fifo"
-    path                    "/tmp/mpd.fifo"
-    format                  "44100:16:2"
+       type            "fifo"
+       name            "Visualizer feed"
+       path            "/tmp/mpd.fifo"
+       format          "44100:16:2"
 }
  
 bind_to_address "127.0.0.1"
